add developer tileset to keep the tile display emb

--- a/rolling-sky/tileset/display/index.html
+++ b/rolling-sky/tileset/display/index.html
@@ -113,7 +113,7 @@ body:hover #openLookup {
 <span>Tile Lookup</span>
 </a>
 <script>
-/*const gridSize = Lang.special.tileset.gridsize;
+const gridSize = Lang.special.tileset.gridsize;
 const imageWidth = Lang.special.tileset.imgwidth;
 document.body.oncontextmenu = function(e) { return false; }
 document.body.ondragstart = function(e) { return false; }
@@ -184,6 +184,6 @@ function getTileURL(number) {
 	url.searchParams.set("ch", ch.toString());
 
 	return url.toString();
-}*/
+}
 </script>
 </body>
